# pdf-rag

./: .gitignore  README.md  pyproject.toml
app/: app-metadata.py
basic-app/: app.py
configs/: metadata_structure_example.yaml  metadata_structure_nicolas.yaml  query_multi_pdfs_example.yaml  query_multi_pdfs_nicolas.yaml
notebooks/: query_multi_pdfs_example.ipynb
scripts/: citation.py  debug.py  metadata.py  metadata_structure.py  query_multi_doc.py  query_multi_pdfs.py  query_one_doc.py  read_dir.py  run_pipeline.py  run_sync_pipeline.py  structure.py
scripts/opio/: debug.py  read_dir.py
src/pdf_rag/: agents_multi_doc.py  config.py  evaluation.py  extractors.py  gemini_wrappers.py  markdown_parsers.py  node_postprocessors.py  react_agent_multi_pdfs.py  readers.py  structure_parsers.py  transforms.py  tree_index.py  utils.py
src/pdf_rag/templates/: check_landscape_toc.jinja2  create_landscape_toc.jinja2  extract_context.jinja2  extract_landscape_pages.jinja2  extract_toc.jinja2  pdf_to_markdown.jinja2  reformat_markdown.jinja2  structure_landscape_pages.jinja2
src/pdf_rag/templates/wip/: extract_context.jinja2  extract_summary.jinja2  extract_topics.jinja2
